[package]
name = "rcvcounter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
csv = "1.2.2"
rand = "0.8.5"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "lib"]